--- a/parking-rental-app/pom.xml
+++ b/parking-rental-app/pom.xml
@@ -17,7 +17,7 @@
 		<jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<mysql.version>8.0.33</mysql.version>
 		<hibernate.core.version>5.6.10.Final</hibernate.core.version>
-		 <jackson.version>2.14.3</jackson.version>
+		<jackson.version>2.14.3</jackson.version>
 	</properties>
 	<dependencies>
 		<dependency>
@@ -75,13 +75,21 @@
 			<artifactId>jstl</artifactId>
 			<version>${jstl.version}</version>
 		</dependency>
+
+		<!-- https://mvnrepository.com/artifact/displaytag/displaytag -->
+		<dependency>
+			<groupId>displaytag</groupId>
+			<artifactId>displaytag</artifactId>
+			<version>1.2</version>
+		</dependency>
+
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-<dependency>
-    <groupId>com.fasterxml.jackson.core</groupId>
-    <artifactId>jackson-databind</artifactId>
-    <version>${jackson.version}</version>
-</dependency>
-		
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>${jackson.version}</version>
+		</dependency>
+
 	</dependencies>
 	<build>
 		<sourceDirectory>src</sourceDirectory>
