--- a/parking-rental-app/pom.xml
+++ b/parking-rental-app/pom.xml
@@ -17,6 +17,7 @@
 		<jcl.slf4j.version>1.7.12</jcl.slf4j.version>
 		<mysql.version>8.0.33</mysql.version>
 		<hibernate.core.version>5.6.10.Final</hibernate.core.version>
+		<displaytag.version>1.2</displaytag.version>
 		<jackson.version>2.14.3</jackson.version>
 	</properties>
 	<dependencies>
@@ -80,7 +81,7 @@
 		<dependency>
 			<groupId>displaytag</groupId>
 			<artifactId>displaytag</artifactId>
-			<version>1.2</version>
+			<version>${displaytag.version}</version>
 		</dependency>
 
 		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
